--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>Kowshik Gopalakrishnan</title>
+	<title>Aman Sahu</title>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -28,9 +28,9 @@ border-radius: 50%;
 	<div class="container"> 
 		<div class="banner-info">
 			<div class="banner-right">
-				<h1>I’M KOWSHIK</h1>
+				<h1>I’M Aman</h1>
 				<div class="border"></div>
-				<h2>EMERGING FULL-STACK DEVELOPER</h2>
+				<h2>INTERN</h2>
 				<h1>COGNIZANT TECHNOLOGY SOLUTIONS</h1>
 			</div>
 			<div class="clearfix"></div>
@@ -41,10 +41,9 @@ border-radius: 50%;
 	<div class="container">
 		<h3>ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
-		<p>I'm an Emerging Fullstack Developer working in Cognizant Technology Solutions, Chennai.  I'm a  mature and ambitious person who has developed a responsible
+		<p>I'm an Data Analyst working in Cognizant Technology Solutions, Banglore.  I'm a  mature and ambitious person who has developed a responsible
 		approach to any task that I undertake.  I'm fueled by my passion for learning and understanding the various
-		concepts and advancements in Web Designing and I'm very much interested in photography.  Other than photography, I'm a bibliophile and likes to read all kind of genres.
-		 Loves watching cricket and a serious movie-buff.</p>
+		concepts and advancements in Data Warehousing.  Other than Data Warehousing I like doing electronic projects, and likes to watch movie of Marvel genre.</p>
 		<ul>
 			<li><a class="fb" href="https://www.facebook.com/kowshik.gk"></a></li>
 			<li><a class="twit" href="https://twitter.com/its_kowshik"></a></li>
@@ -67,10 +66,10 @@ border-radius: 50%;
 				<div class="edu-border">
 					<div class="edu-grid-master">
 						<h3>10th GRADE </h3>
-						<h4>T.V.S Matriculation Higher Secondary School</h4>
+						<h4>Canyon H.S. School, Bhopal</h4>
 					</div>
 					<div class="edu-grid-info">
-						<h5>Did my 10th grade in TVS Matriculation Higher Secondary School and passed with 92.8% and a centum in Mathematics.</h5>
+						<h5>Did my 10th grade in Canyon H.S. School, Bhopal and passed with 77%.</h5>
 					</div>
 				</div>
 			</div>
@@ -80,10 +79,10 @@ border-radius: 50%;
 				<div class="edu-border">
 					<div class="edu-grid-master">
 						<h3>12th GRADE</h3>
-						<h4>T.V.S Matriculation Higher Secondary School</h4>
+						<h4>Canyon H.S. School, Bhopal</h4>
 					</div>
 					<div class="edu-grid-info">
-						<h5>Completed my HSC with 92.83% in TVS Matriculation Higher Secondary School with Computer Science as my major. </h5>
+						<h5>Completed my HSC with 76% in Canyon H.S. School, Bhopal. </h5>
 					</div>
 				</div>
 			</div>
@@ -92,11 +91,11 @@ border-radius: 50%;
 				<img src="images/arrow.png" alt=""/>
 				<div class="edu-border">
 					<div class="edu-grid-master">
-						<h3>UG IN MECHANICAL ENGINEERING</h3>
-						<h4>Velammal College Of Engineering & Technology</h4>
+						<h3>UG IN ELECTRONIC AND COMMUNICATION</h3>
+						<h4>LAKSHMI NARAIN COLLEGE OF TECHNOLOGY, BHOPAL</h4>
 					</div>
 					<div class="edu-grid-info">
-						<h5>Completed my undergrad in Mechanical with CGPA of 8.53 in Velammal College of Engineering & Technology.</h5>
+						<h5>Persuing my undergrad in Electronic and Communication with CGPA of 8.2 in Lakshmi Narain College of Technology, Bhopal.</h5>
 					</div>
 				</div>
 			</div>
@@ -119,17 +118,7 @@ border-radius: 50%;
 						<h3>Project Presentation </h3>
 					</div>
 					<div class="edu-grid-info">
-						<h5>Did a project on Underwater Robot with two link manipulator using Arduino-UNO</h5>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 edu-grid">
-				<div class="edu-border">
-					<div class="edu-grid-master">
-						<h3>Papers / Journals</h3>
-					</div>
-					<div class="edu-grid-info">
-						<h5>Submitted a paper on Prevention of Footboard Accidents using proximity sensors.</h5>
+						<h5>Did a project on CNC based PCB plotter using Arduino</h5>
 					</div>
 				</div>
 			</div>
@@ -139,7 +128,7 @@ border-radius: 50%;
 						<h3>Final Year Project</h3>
 					</div>
 					<div class="edu-grid-info">
-						<h5>Did Industrial project on a Bolt Forging Machine which is currently employed in TVS SFL.</h5>
+						<h5>Did a project on CNC based PCB plotter using Arduino.</h5>
 					</div>
 				</div>
 			</div>
@@ -162,7 +151,7 @@ border-radius: 50%;
 					<h3>November 2017 - Now</h3>
 					<div class="work-grid-info">
 						<h4>COGNIZANT TECHNOLOGY SOLUTIONS</h4>
-						<h5>Emerging Full-stack Developer</h5>
+						<h5>Data Analyst</h5>
 						<p>I'm working in Cognizant currently as a Programmer Analyst Trainee(PAT). Currently learning how Bootstrap works and various applications of Bootstrap 3.</p>
 					</div>
 				</div>
@@ -180,23 +169,18 @@ border-radius: 50%;
 		<div class="ser-grids">
 			<div class="col-md-3 ser-grid">
 				<img src="images/html5.png" height="190px" width="190px">
-				<h3>HTML 5</h3>
-				<p>HTML5 is a markup language used for structuring and presenting content on the World Wide Web. It is the fifth and current major version of the HTML standard.</p>
+				<h3>SQL</h3>
+				<p>SQL is used to communicate with a database. According to ANSI (American National Standards Institute), it is the standard language for relational database management systems. SQL statements are used to perform tasks such as update data on a database, or retrieve data from a database.</p>
 			</div>
 			<div class="col-md-3 ser-grid">
 				<img src="images/css3.png" height="190px" width="210px">
-				<h3>CSS 3</h3>
-				<p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.</p>
+				<h3>PL/SQL</h3>
+				<p>PL/SQL is a combination of SQL along with the procedural features of programming languages. It was developed by Oracle Corporation in the early 90's to enhance the capabilities of SQL.</p>
 			</div>
 			<div class="col-md-3 ser-grid">
 				<img src="images/js.png" height="190px" width="140px">
-				<h3>JavaScript</h3>
-				<p>JavaScript, often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language.</p>
-			</div>
-			<div class="col-md-3 ser-grid">
-				<img src="images/jQurery.gif" height="190px" width="160px">
-				<h3>JQuery</h3>
-				<p>jQuery is a cross-platform JavaScript library designed to simplify the client-side scripting of HTML. It is free, open-source software using the permissive MIT License.</p>
+				<h3>Java</h3>
+				<p>Java is a general-purpose computer-programming language that is concurrent, class-based, object-oriented, and specifically designed to have as few implementation dependencies as possible. It is intended to let application developers "write once, run anywhere" (WORA), meaning that compiled Java code can run on all platforms that support Java without the need for recompilation.</p>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -209,19 +193,15 @@ border-radius: 50%;
 		<div class="skill-grids">
 					<div class="col-md-2 col-md-offset-1 skills-grid text-center">
 						<div class="circle" id="circles-1"></div>
-						<p>HTML 5</p>
+						<p>SQL</p>
 					</div>
 					<div class="col-md-2 col-md-offset-1 skills-grid text-center">
 						<div class="circle" id="circles-2"></div>
-						<p>CSS 3</p>
+						<p>PL/SQL</p>
 					</div>
 					<div class="col-md-2 col-md-offset-1 skills-grid text-center">
 						<div class="circle" id="circles-3"></div>
-						<p>JavaScript</p>
-					</div>
-					<div class="col-md-2 col-md-offset-1 skills-grid text-center">
-						<div class="circle" id="circles-4"></div>
-						<p>JQuery</p>
+						<p>Java</p>
 					</div>
 					<div class="clearfix"> </div>
 				 <script type="text/javascript" src="js/circles.js"></script>
