--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ border-radius: 50%;
 		<div class="col-md-4 contact-grids contact1" id="address" style="font-size:20px;">
 				<h3>Say Hi to Me</h3>
 				<h3><ul>
-					<li><a href="mailto:info@example.com">kowshikgr@gmail.com</a></li><br>
+					<li><a href="mailto:aman.tnp3@gmail.com">aman.tnp3@gmail.com</a></li><br>
 					<li>facebook.com/kowshik.gk</li><br>
 					<li>twitter.com/its_kowshik</li><br>
 					<li>linkedin.com/in/kowshik-gopalakrishnan-772a29144/</li><br>
