--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ border-radius: 50%;
 					<div class="work-grid-info">
 						<h4>COGNIZANT TECHNOLOGY SOLUTIONS</h4>
 						<h5>Data Analyst</h5>
-						<p>I'm working in Cognizant currently as a Programmer Analyst Trainee(PAT). Currently learning how Bootstrap works and various applications of Bootstrap 3.</p>
+						<p>I'm working in Cognizant currently as a Programmer Analyst Trainee(PAT). Currently learning how SQL, PL/SQL and Informatica.</p>
 					</div>
 				</div>
 			</div>
